# Astrea

./: .env  README.md  pyproject.toml  run_web.py  task_tracker_data.json  validate.py
astrea/: __init__.py  main.py
astrea/agents/: __init__.py  common.py  llm_repair.py  system.yaml
astrea/agents/callbacks/: __init__.py  research_callbacks.py  tool_callbacks.py
astrea/agents/prompts/: __init__.py  builder.py  templates.py
astrea/assembly/: __init__.py  __main__.py  assembler.py  bindings.py  prompting.py  registry.py  schema.py
astrea/config/: __init__.py  settings.py
astrea/hitl/: __init__.py  callbacks.py  handler.py  models.py  session_agent.py  tool.py
astrea/logging/: __init__.py  event_logger.py  logger.py  opik_tracer.py
astrea/paper_parser/: s3_connection.py
astrea/storage/: __init__.py  models.py
astrea/tools/: __init__.py  mcp_patches.py  research_tools.py  task_tracker.py
astrea/web/: __init__.py  app.py  handler.py  server.py
astrea/web/templates/: index.html
tests/: test_assembly.py
